--- a/package.json
+++ b/package.json
@@ -44,7 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "typescript-plugin-css-modules": "^3.4.0"
-  }
+  "devDependencies": {}
 }
